--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.166.0",
+    "axios": "^1.7.7",
     "framer-motion": "^11.3.13",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
@@ -49,5 +50,6 @@
   "devDependencies": {
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
