--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.166.0",
     "axios": "^1.7.7",
-    "framer-motion": "^11.3.13",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
     "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,7 +21,8 @@
     "react-scroll": "^1.9.0",
     "shadergradient": "^1.2.14",
     "styled-components": "^6.1.13",
-    "three": "^0.166.1",
+    "tailwind-merge": "^2.5.2",
+    "three": "^0.154.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,7 +51,10 @@
   },
   "devDependencies": {
     "ajv": "^8.17.1",
-    "ajv-keywords": "^5.1.0"
+    "ajv-keywords": "^5.1.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13"
   },
   "proxy": "http://localhost:5000"
 }
