--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-spinners": "^0.14.1",
     "shadergradient": "^1.2.14",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
