--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@react-spring/three": "^9.7.4",
     "@react-three/drei": "^9.112.1",
     "@react-three/fiber": "^8.16.8",
@@ -57,5 +58,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://rc-portfolio-backend.onrender.com/"
 }
