--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13"
   },
-  "proxy": "https://rc-portfolio-backend.onrender.com/"
+  "proxy": "https://rc-api-w946.onrender.com"
 }
